--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/NicciMoyer/Homework10#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "inquirer": "^7.3.3",
     "mysql": "^2.18.1"
   }
